[package]
name = "like"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "A SQL like style pattern matching."
keywords = ["like", "pattern matching"]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "like"
harness = false