[package]
name = "like"
version = "0.1.3"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
description = "A SQL like style pattern matching."
keywords = ["like", "pattern", "matching"]
repository = "https://github.com/cod-technologies/like.git"
homepage = "https://github.com/cod-technologies/like"
documentation = "https://docs.rs/like/"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "like"
harness = false
